fix layout issues

--- a/block/banner.module.css
+++ b/block/banner.module.css
@@ -15,7 +15,7 @@
     font-family: Abril Fatface;
     font-style: normal;
     font-weight: 400;
-    font-size: 45px;
+    font-size: 40px;
     line-height: 200%;
     text-align: center;
     color: #000000;
