--- a/block/header.module.css
+++ b/block/header.module.css
@@ -1,3 +1,19 @@
+.headText a:link {
+    color: black;
+    text-decoration: none
+}
+.headText a:visited {
+    color: black;
+    text-decoration: none
+}
+.headText a:hover {
+    color: black;
+    text-decoration: none
+}
+.headText a:active {
+    color: black;
+    text-decoration: none
+}
 .header {
     background-image: url("/images/tile.svg");
     background-repeat: no-repeat;
@@ -8,19 +24,16 @@
 }
 #logo {
     position: absolute;
-    width: 200px;
-    height: 45px;
     top: 10px;
     left: 15px;
+    width: 200px;
+    height: 45px;
 }
-/*
-#headtext {
+#appendtext {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    margin-left: 240px;
+    top: 10px;
+    left: 215px;
 }
-*/
 .headText {
     font-family: 'Aoboshi One';
     font-style: normal;
@@ -29,46 +42,38 @@
     line-height: 200%;
     text-align: justify;
     color: #000000;
+    margin-top: 9px;
+    margin-left: 10px;
 }
-#textCol {
+.iconbox {
     position: absolute;
-    top: 9px;
-    margin-left: 220px;
+    top: 55%;
+    transform: translateY(-50%);
+    right: 10px; /*160px;*/
 }
-#textFAQ {
-    position: absolute;
-    top: 9px;
-    margin-left: 330px;
+.icon {
+    margin-right: 15px;
 }
 /*
-#styleCollection {
-    margin-left: 100px;
-}
-
-#styleFAQ {
-    margin-left: 200px;
-    color: red;
-}
-*/
 #iconTwitter {
     position: absolute;
     top: 60%;
     transform: translateY(-50%);
-    right: 110px; /*160px;*/
+    right: 110px; 
 }
 
 #iconFB {
     position: absolute;
     top: 60%;
     transform: translateY(-50%);
-    right: 60px; /*110px;*/
+    right: 60px; 
 }
 
 #iconDC {
     position: absolute;
     top: 60%;
     transform: translateY(-50%);
-    right: 10px; /*60px;*/
+    right: 20px; 
 }
 
 #iconProfile {
@@ -77,7 +82,7 @@
     transform: translateY(-50%);
     right: 10px;
 }
-
+*/
 @media (max-width: 700px){
     .header {
         height: 60px;
@@ -86,34 +91,27 @@
         width: 160px;
         height: 36px;
     }
-    #textCol {
-        position: absolute;
+    #appendtext {
         top: 7px;
-        margin-left: 185px;
+        left: 175px;
     }
-    #textFAQ {
-        position: absolute;
-        top: 7px;
-        margin-left: 300px;
-    } 
-    #styleCollection {
-        left: 90px;
+    .icon {
+        margin-right: 10px;
     }
-    #styleFAQ {
-        left: 180px;
-    }
+    /*
     #iconTwitter {
-        right: 90px; /*130px;*/
+        right: 90px; 
     }
     #iconFB {
-        right: 50px; /*90px;*/
+        right: 50px; 
     }
     #iconDC {
-        right: 10px; /*50px;*/
+        right: 10px; 
     }
     #iconProfile {
-        right: 10px;
+        right: 15px;
     }
+    */
 }
 
 @media (max-width: 400px){
@@ -126,36 +124,32 @@
         width: 100px;
         height: 24px;
     }
+    #appendtext {
+        top: 11px;
+        left: 105px;
+    }
     .headText {
         font-size: 16px;
         line-height: 200%;
+        margin-left: 5px;
     }
-    #textCol {
-        position: absolute;
-        top: 10px;
-        margin-left: 110px;
+    .icon {
+        margin-right: 5px;
+        width: 30px;
+        height: 30px;
     }
-    #textFAQ {
-        position: absolute;
-        top: 10px;
-        margin-left: 185px;
-    }
-    #styleCollection {
-        margin-left: 80px;
-    }
-    #styleFAQ {
-        margin-left: 160px;
-    }
+    /*
     #iconTwitter {
-        right: 70px; /*100px;*/
+        right: 70px; 
     }
     #iconFB {
-        right: 40px; /*70px;*/
+        right: 40px; 
     }
     #iconDC {
-        right: 10px; /*40px;*/
+        right: 10px; 
     }
     #iconProfile {
         right: 10px;
     }
+    */
 }
